--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/Users/asrulsaniariesandy/anaconda3/bin/python"
+    "python.pythonPath": "/Users/asrulsaniariesandy/anaconda3/bin/python",
+    "python.linting.pylintArgs": ["--load-plugins", "pylint-flask"]
 }
